# antic-rs

./: .gitignore  Cargo.toml  README.md  build.rs  generate_bindings.sh
src/: bindings.rs  lib.rs  safe.rs
